Empezado la estructura general del portfolio + css.

--- a/index.html
+++ b/index.html
@@ -5,8 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
+    <nav id="navbar"><a href=""></a></nav>
+    <header id="welcome-section">
+        <h1>Hi, i'm Mat&iacute;as, a web dev.</h1>
+        <div>
+            <ul>
+                <li>About Me.</li>
+                <li>Proyects</li>
+                <li>Contact Section</li>
+                <li>Let's play!</li>
+            </ul>
+        </div>
+    </header>
+    <main>
+        <section id="projects">
+            <article class="project-tile">
+                <a>
+
+                </a>
+            </article>
+        </section>
+        <section id="links">
+            <a id="profile-link"></a>
+        </section>
     
+    
+    </main>
 </body>
-</html>m
+</html>
