comienzo de diseño del portfolio, pantalla de inicio hecha

--- a/index.html
+++ b/index.html
@@ -10,20 +10,31 @@
 <body>
     <nav id="navbar"><a href=""></a></nav>
     <header id="welcome-section">
-        <h1>Hi, i'm Mat&iacute;as, a web dev.</h1>
-        <div>
+        <div class="title-center">
+            <h1 class="titleHeader">Hi, i'm Mat&iacute;as, a web dev.</h1>
+        </div>
+        <div class="center-menu">
             <ul>
-                <li>About Me.</li>
-                <li>Proyects</li>
-                <li>Contact Section</li>
-                <li>Let's play!</li>
+                <li class="select-option"><img class="select-option-icon" src="./css/svg/Cafesito.svg"/>About Me.</li>
+                <li class="select-option"><img class="select-option-icon" src="./css/svg/Cafesito.svg"/>Contact Section</li>
+                <li class="select-option"><img class="select-option-icon" src="./css/svg/Cafesito.svg"/>Proyects</li>
+                <li class="select-option"><img class="select-option-icon" src="./css/svg/Cafesito.svg"/>Let's play!</li>
             </ul>
         </div>
+        <footer class="header-footer">
+            <p>Build in 2021 by Matias Di Croce</p>
+        </footer>
     </header>
-    <main>
+    <main id="main-menu">
+        <section id="about-me">
+            <h2>Frontend react developer and backend dev with Node.js</h2>
+            <p>
+                Empecé a estudiar en 2019 porgramación en la Universidad Tecnológica Nacional en Argentina, apasionado por conocer más 
+            </p>
+        </section>
         <section id="projects">
             <article class="project-tile">
-                <a>
+                <a href="">
 
                 </a>
             </article>
