Introduccion de links de contacto finales

--- a/index.html
+++ b/index.html
@@ -61,23 +61,16 @@
             </div>
         </section>
         <section id="links">
+            <div class="links-para">
+                <h2 class="links-para-h">
+                    Let's Play!
+                </h2>
+                <p class="links-para-p">If you wanna work together, please contact me! </p>
+            </div>
             <div class="links-container">
-                <div class="linkscontainer">
-                    <a href="https://www.linkedin.com/in/matiasdicroceb/"><i class="fab fa-linkedin"></i></a>
-                </div>
-                <div class="linkscontainer">
-                    <a href="https://github.com/mdicroce"><i class="fab fa-github-square"></i></a>
-                </div>
-                <div class="linkscontainer">
-                    
-                    <a href="mailto:mddicroce@gmail.com"><i class="fas fa-mail-bulk"></i></a>
-                </div>
-                <div class="linkscontainer">
-                    <a href=""></a>
-                </div>
-                <div class="linkscontainer">
-                    <a href=""></a>
-                </div>
+                <a class="link-contact" href="https://www.linkedin.com/in/matiasdicroceb/"><i class="link-icon fab fa-linkedin"></i> <p>Linkedin</p></a>
+                <a class="link-contact" href="https://github.com/mdicroce"><i class="link-icon fab fa-github-square"></i> <p>Github</p></a>
+                <a class="link-contact" href="mailto:mddicroce@gmail.com"><i class="link-icon fas fa-mail-bulk"></i> <p>Mail</p></a>
             </div>
         </section>
     
