Ahora los little problemas que tenia el portfolio fueron solucionados

--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
                 
             </div>
             <div id="projects-container">
-                <article class="project-tile"><a class="anchor-prevent" href="https://weatherbxl.netlify.app/"><div class="project-image-container"> <img class="project-image" src="./images/web1.svg" alt="" srcset=""></div><h3 class="project-tile-title">Proyecto 1</h3></a></article>
+                <article class="project-tile"><a class="anchor-prevent" href="https://weatherbxl.netlify.app/"><div class="project-image-container"> <img class="project-image" src="./images/web1.svg" alt="" srcset=""></div><h3 class="project-tile-title">Weather App</h3></a></article>
+                <article class="project-tile"><a class="anchor-prevent" href="#"><div class="project-image-container"> <img src="./images/proximamente.jpg" class="project-image" alt="" srcset=""></div><h3 class="project-tile-title">Colaboratives notes</h3></a></article>
+<!--                 <article class="project-tile"><a class="anchor-prevent" href="http://"><div class="project-image-container"> <img src="" alt="" srcset=""></div><h3 class="project-tile-title">Proyecto 1</h3></a></article>
                 <article class="project-tile"><a class="anchor-prevent" href="http://"><div class="project-image-container"> <img src="" alt="" srcset=""></div><h3 class="project-tile-title">Proyecto 1</h3></a></article>
                 <article class="project-tile"><a class="anchor-prevent" href="http://"><div class="project-image-container"> <img src="" alt="" srcset=""></div><h3 class="project-tile-title">Proyecto 1</h3></a></article>
-                <article class="project-tile"><a class="anchor-prevent" href="http://"><div class="project-image-container"> <img src="" alt="" srcset=""></div><h3 class="project-tile-title">Proyecto 1</h3></a></article>
-                <article class="project-tile"><a class="anchor-prevent" href="http://"><div class="project-image-container"> <img src="" alt="" srcset=""></div><h3 class="project-tile-title">Proyecto 1</h3></a></article>
-                <article class="project-tile"><a class="anchor-prevent" href="http://"><div class="project-image-container"> <img src="" alt="" srcset=""></div><h3 class="project-tile-title">Proyecto 1</h3></a></article>
+                <article class="project-tile"><a class="anchor-prevent" href="http://"><div class="project-image-container"> <img src="" alt="" srcset=""></div><h3 class="project-tile-title">Proyecto 1</h3></a></article> -->
             </div>
         </section>
         <section id="links">
