--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portfolio</title>
+    <link rel="icon" href="/images/pageSvg.svg">
     <link rel="stylesheet" href="./css/styles.css">
     <script defer src="./js/all.js"></script>
     <!--load all styles -->
