--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="image" property="og:image" content="./images/screenshot.png">
     <title>Portfolio</title>
     <link rel="icon" href="/images/pageSvg.svg">
     <link rel="stylesheet" href="./css/styles.css">
