--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="image" property="og:image" content="./images/screenshot.png">
+    <meta property="og:title" content="Portafolio">
+    <meta property="og:url" content="https://mdicroce.github.io">
     <title>Portfolio</title>
-    <link rel="icon" href="/images/pageSvg.svg">
+    <link rel="icon" href="./images/pageSvg.svg">
     <link rel="stylesheet" href="./css/styles.css">
     <script defer src="./js/all.js"></script>
     <!--load all styles -->
