--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta property="og:title" content="Portafolio">
     <meta property="og:url" content="https://mdicroce.github.io">
     <title>Portfolio</title>
-    <link rel="icon" href="./images/pageSvg.svg">
+    <link rel="icon" href="https://mdicroce.github.io/images/pageSvg.svg">
     <link rel="stylesheet" href="./css/styles.css">
     <script defer src="./js/all.js"></script>
     <!--load all styles -->
