--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="image" property="og:image" content="./images/Screenshot.png">
+    <meta name="image" property="og:image" content="https://mdicroce.github.io/images/Screenshot.png">
     <meta property="og:title" content="Portafolio">
     <meta property="og:url" content="https://mdicroce.github.io">
     <title>Matias Di Croce Bernard</title>
